--- a/mine.css
+++ b/mine.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap");
 
 :root {
-   --purple-background: 263 55% 52%;
-   --right-bg: 217 19% 35%;
-   --bottom-bg: 219 29% 14%;
+   --purple-background: hsl(263 55% 52%);
+   --right-bg: hsl(217 19% 35%);
+   --bottom-bg: hsl(219 29% 14%);
    --antiquewhite: antiquewhite;
 
    /* Fonts */
@@ -16,21 +16,55 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+   font-size: 62.5%;
 }
 
 body {
    font-family: var(--primary);
    line-height: 1.5;
-   margin-bottom: 3rem;
-   font-size: 62.5%;
-   background-color: grey;
+   background-color: lightgrey;
 }
 
 .container-grid {
    display: grid;
-   margin: 10rem auto;
-   background-color: whitesmoke;
+   margin: 7rem auto;
+   background-color: black;
    width: 80%;
    grid-template-columns: repeat(3, 1fr);
    padding: 2rem;
+   place-content: center;
+   gap: 2rem;
+   border-radius: 20px;
+}
+
+.container-grid p {
+   font-size: 1.5rem;
+   color: hsl(0, 0%, 96%, 0.8);
+}
+
+.box {
+   padding: 2rem;
+   border: 1px whitesmoke solid;
+   border-radius: 20px;
+}
+.container-grid h1 {
+   font-size: 2rem;
+}
+.header {
+   display: flex;
+}
+.header img {
+   width: 7rem;
+   height: auto;
+   border-radius: 50%;
+   margin-right: 1.5rem;
+   margin-bottom: 1rem;
+}
+.text p {
+   font-size: 1rem;
+}
+
+.container-grid .box.one {
+   grid-column: 1/3;
+   background-color: var(--purple-background);
 }
